
In the following text, the tag "USER" indicates a significant change that will impact user experience in some way.
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user.

For more information on major releases merged into master from pre-release.

31nd May 2024
The following changes have been made over the last few months. There may be other minor changes too.
- USER: Histogram windows close when acquisition saving is initiated.
- USER: remove "zoom" from the drop-down for resolution and convert "u" to Greek "mu".
- USER: add convenience buttons to raise sample and lower Z stage
- USER: close the new persistent histogram windows when tile saving is set up. likely this results in a small speedup.
- USER: Bake is not possible if sample ID or sample folder contain non-alphanumeric (- and _ are OK) The recipe class no longer corrects funny characters in file names.
- USER: A confirmation dialog pops up when the user tries to unlock the Z stage.
- USER: The error message that tells users to have the same PMTs on as channels saved is now worded more clearly.
- BUGFIX: fixed a bug that was causing voxel size to be incorrectly written now and then.
- Minor bugfixes to acquisition resume
- Zaber class now works with Zaber X-LDA stages.


August 2022
- USER: Handle resume scenario where the acquisition has no completed sections.
- USER: Handle resume scenario where the autoROI.mat file is missing or corrupt.
- Minor bugfix to recipe saving: sometimes the wrong recipe settings were saved.
- Message telling user that the active PMTs and saved channels do match was confusing. It has been clarified.

7th November 2022
- USER (Dev -> Master) - Fix regression that had caused the laser power to no longer be displayed in the laser GUI.
- USER (Dev -> Master) - Add a tooltip to explain what the Lock-Z checkbox does.
- USER (Dev) - Overlay stage boundaries onto preview image.

August 2022